src/objects/Integration_Subject_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Fieldset_Name__c</fullName>
        <label>Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Subject__c</fullName>
        <label>Integration Subject</label>
        <referenceTo>Integration_Subject__c</referenceTo>
        <relationshipLabel>Integration Subject Details</relationshipLabel>
        <relationshipName>Integration_Subject_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Table_Name__c</fullName>
        <description>Name of table for the subject</description>
        <label>Table Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Subject Detail</label>
    <nameField>
        <displayFormat>ISUBD-{000000}</displayFormat>
        <label>Integration Subject Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Subject Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>